throw it for the M's

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             hello
         </p>
         <p>
-            world
+            yeetmeisters and maestros
         </p>        
         <p>
             this
